# R-Type

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  build.bat  build.sh  spritesheet_selector.html
.github/workflows/: workflow.yml
Action/: Action.hpp
Client/: main.cpp
Client/Core/: ClientPacketreader.cpp  ClientPacketreader.hpp  ClientTcpReader.cpp  ClientTcpReader.hpp  Network.cpp  Network.hpp
Client/Creator/: Creator.cpp  Creator.hpp
Client/Factory/: Factory.cpp  Factory.hpp
Client/Factory/Effect/: EffectFactory.cpp  EffectFactory.hpp
Client/Factory/Tools/: ToolsFactory.cpp  ToolsFactory.hpp
Client/Factory/UI/: UIFactory.cpp  UIFactory.hpp
Client/Factory/World/: WorldFactory.cpp  WorldFactory.hpp
Client/Game/: Game.cpp  Game.hpp
Client/Game/Component/HP/: HP.cpp  HP.hpp
Client/GameHelper/: GameHelper.cpp  GameHelper.hpp
Client/GameHelper/Graphical/: GameHelperGraphical.cpp  GameHelperGraphical.hpp
Client/LanguageHandler/: LanguageHandler.cpp  LanguageHandler.hpp
Client/LevelLoader/: LevelLoader.cpp  LevelLoader.hpp
Client/ScriptsHandler/: ScriptsHandler.cpp  ScriptsHandler.hpp
Common/: EntitiesType.hpp
Doc/: UDP-protocol.md
ECS/: EcsError.hpp  World.cpp  World.hpp
ECS/Component/: Component.hpp
ECS/Component/Animator/: Animator.cpp  Animator.hpp
ECS/Component/BoxCollider/: BoxCollider.cpp  BoxCollider.hpp
ECS/Component/Button/: Button.cpp  Button.hpp
ECS/Component/Camera/: Camera.cpp  Camera.hpp
ECS/Component/Damage/: Damage.cpp  Damage.hpp
ECS/Component/Data/: Data.cpp  Data.hpp
ECS/Component/Group/: Group.cpp  Group.hpp
ECS/Component/GuiWidget/: GuiWidget.cpp  GuiWidget.hpp
ECS/Component/HP/: HP.cpp  HP.hpp
ECS/Component/Layer/: Layer.cpp  Layer.hpp
ECS/Component/Music/: Music.cpp  Music.hpp
ECS/Component/Position/: Position.cpp  Position.hpp
ECS/Component/RectangleShape/: RectangleShape.cpp  RectangleShape.hpp
ECS/Component/Rotation/: Rotation.cpp  Rotation.hpp
ECS/Component/Scale/: Scale.cpp  Scale.hpp
ECS/Component/ScaleCollider/: ScaleCollider.cpp  ScaleCollider.hpp
ECS/Component/ScaleSprite/: ScaleSprite.cpp  ScaleSprite.hpp
ECS/Component/Scene/: Scene.cpp  Scene.hpp
ECS/Component/Script/: Script.cpp  Script.hpp
ECS/Component/SoundEffect/: SoundEffect.cpp  SoundEffect.hpp
ECS/Component/Sprite/: Sprite.cpp  Sprite.hpp
ECS/Component/Tag/: Tag.cpp  Tag.hpp
ECS/Component/Text/: Text.cpp  Text.hpp
ECS/Component/Velocity/: Velocity.cpp  Velocity.hpp
ECS/Entity/: Entity.cpp  Entity.hpp
ECS/Entity/Component/: Component.hpp
ECS/Entity/Component/HP/: HP.cpp  HP.hpp
ECS/Entity/Component/Layer/: Layer.cpp  Layer.hpp
ECS/Entity/Component/Position/: Position.cpp  Position.hpp
ECS/Entity/Component/Sprite/: Sprite.cpp  Sprite.hpp
ECS/System/: System.hpp
ECS/System/Animation/: Animation.cpp  Animation.hpp
ECS/System/Audio/: Audio.cpp  Audio.hpp
ECS/System/CameraSys/: CameraSys.cpp  CameraSys.hpp
ECS/System/Collision/: Collision.cpp  Collision.hpp
ECS/System/DeathSys/: DeathSys.cpp  DeathSys.hpp
ECS/System/Draw/: Draw.cpp  Draw.hpp
ECS/System/GuiSystem/: GuiSystem.cpp  GuiSystem.hpp
ECS/System/Inputs/: Inputs.cpp  Inputs.hpp
ECS/System/Mouse/: Mouse.cpp  Mouse.hpp
ECS/System/Movement/: Movement.cpp  Movement.hpp
ECS/System/ScriptsSys/: ScriptsSys.cpp  ScriptsSys.hpp
ECS/System/TextSys/: TextSys.cpp  TextSys.hpp
ECS/System/Updater/: Updater.cpp  Updater.hpp
Game/: main.cpp
Levels/: level0.json  level1.json  level2.json  level3.json  level4.json  level5.json
Mode/: Mode.hpp
Packet/: CustomError.hpp  MyString.cpp  MyString.hpp  Packet.cpp  Packet.hpp  Packetreader.cpp  Packetreader.hpp  TcpReader.cpp  TcpReader.hpp
PacketBuilder/: Packet.hpp
Server/: IGameNetwork.hpp  Server.cpp  Server.hpp  User.cpp  User.hpp  main.cpp
Server/Core/: Server.cpp  Server.hpp  User.cpp  User.hpp
Server/Game/: ServerGame.cpp  ServerGame.hpp
Server/Game/Enemy/: EnemyBehaviour.cpp  EnemyBehaviour.hpp
Server/GetOpt/: GetOpt.cpp  GetOpt.h
Server/LevelLoader/: LevelLoader.cpp  LevelLoader.hpp
assets/localization/: de.json  en.json  es.json  fr.json  it.json  li.json  pt.json  ru.json
assets/shaders/: colorblind.frag
docs/: ECS.md  TCP-protocol.md  UDP-protocol.md  architecture.md  index.md  protocol.md  technical_choices.md  tutorial.md
docs/ECS/: Ecserror.md  World.md
docs/ECS/Entity/: Entity.md
docs/ECS/component/: Animator.md  BoxCollider.md  Button.md  Camera.md  Damage.md  Data.md  Group.md  GuiWidget.md  Hp.md  Layer.md  Music.md  Position.md  RectangleShape.md  Rotation.md  Scale.md  ScaleCollider.md  ScaleSprite.md  Scene.md  Script.md  SoundEffect.md  Sprite.md  Tag.md  Text.md  Velocity.md
docs/ECS/systems/: Animation.md  Audio.md  CameraSys.md  Collision.md  DeathSys.md  Draw.md  GuiSystem.md  Input.md  Mouse.md  Movement.md  ScriptSys.md  TextSys.md  Updater.md
docs/Game/: Creator.md  Game.md  GameHelper.md  LanguageHandler.md  LevelLoader.md  ScriptsHandler.md
docs/Game/Factory/: EffectFactory.md  Factory.md  ToolsFactory.md  UIFatcory.md  WorldFactory.md
docs/Game/GameHelper/: GameHelper.md  GameHelperGraphical.md
docs/Server/: ACK.md  packet_system.md
packet/: Packet.cpp  Packet.hpp
